--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,33 @@
     <title>disclosure</title>
     <link rel="stylesheet" href="build/tailwind.css">
 </head>
-<body>
+<body class="bg-blue-700 flex justify-center items-center h-screen">
+    <div class="max-w-md bg-white rounded-xl p-4 w-full flex flex-col gap-y-4">
+        <!-- accordion NO.1 -->
+         <div class="">
+            <!-- header -->
+            <div class="bg-blue-600 text-white px-2 p-1 rounded-lg cursor-pointer flex justify-between items-center">
+                <span>what is refound policy</span>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                </svg>                  
+            </div>
+            <!-- content -->
+             <div class="mt-1">
+                fshdjlfhlsldjk fhsjd hfslkd jksd lskd hjfldj fljds hlshdflnrjlgsfjlknl
+             </div>
+         </div>
+         <!-- accordion NO.2 -->
+         <div class="">
+            <!-- header -->
+            <div class="bg-blue-600 text-white px-2 rounded-lg cursor-pointer">
+                what is refound policy
+            </div>
+            <!-- content -->
+             <div class="mt-1">
+                fshdjlfhlsldjk fhsjd hfslkd jksd lskd hjfldj fljds hlshdflnrjlgsfjlknl
+             </div>
+         </div>
+    </div>
 </body>
 </html>
