--- a/public/index.html
+++ b/public/index.html
@@ -9,30 +9,38 @@
 <body class="bg-blue-700 flex justify-center items-center h-screen">
     <div class="max-w-md bg-white rounded-xl p-4 w-full flex flex-col gap-y-4">
         <!-- accordion NO.1 -->
-         <div class="">
+         <div class="" x-data="{tabOne : false}">
             <!-- header -->
-            <div class="bg-blue-600 text-white px-2 p-1 rounded-lg cursor-pointer flex justify-between items-center">
+            <div @click="tabOne = !tabOne" class="bg-blue-600 text-white px-4 p-4 rounded-lg cursor-pointer flex justify-between items-center">
                 <span>what is refound policy</span>
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                </svg>                  
+                <svg :class="tabOne ? 'rotate-180' : '' " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5 transition-all duration-700">
+                    <path fill-rule="evenodd" d="M9.47 6.47a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 1 1-1.06 1.06L10 8.06l-3.72 3.72a.75.75 0 0 1-1.06-1.06l4.25-4.25Z" clip-rule="evenodd" />
+                  </svg>
+                             
             </div>
             <!-- content -->
-             <div class="mt-1">
-                fshdjlfhlsldjk fhsjd hfslkd jksd lskd hjfldj fljds hlshdflnrjlgsfjlknl
+             <div  class="pt-2 px-4" x-show="tabOne">
+                fhdjlfhlsldjk fhsjd hfslkd jksd lskd hjfldj fljds hlshdflnrjlgsfjlknl
              </div>
          </div>
          <!-- accordion NO.2 -->
-         <div class="">
+         <div class="" x-data="{ tabTwo : false }">
             <!-- header -->
-            <div class="bg-blue-600 text-white px-2 rounded-lg cursor-pointer">
-                what is refound policy
+            <div @click="tabTwo = !tabTwo" class="bg-blue-600 text-white px-4 p-4 rounded-lg cursor-pointer flex justify-between items-center">
+                <span>what is refound policy</span>
+                <svg :class="tabTwo ? 'rotate-180' : '' " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5 transition-all duration-700">
+                    <path fill-rule="evenodd" d="M9.47 6.47a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 1 1-1.06 1.06L10 8.06l-3.72 3.72a.75.75 0 0 1-1.06-1.06l4.25-4.25Z" clip-rule="evenodd" />
+                </svg>                               
             </div>
             <!-- content -->
-             <div class="mt-1">
-                fshdjlfhlsldjk fhsjd hfslkd jksd lskd hjfldj fljds hlshdflnrjlgsfjlknl
+             <div  class="pt-2 px-4" x-show="tabTwo">
+                fhdjlfhlsldjk fhsjd hfslkd jksd lskd hjfldj fljds hlshdflnrjlgsfjlknl
              </div>
          </div>
     </div>
+
+    
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/2.3.0/alpine-ie11.js"></script>
 </body>
 </html>
